# ConsoleChess

./: CMakeLists.txt  README.md  main.cpp
include/: AI.h  Board.h  Game.h  Piece.h  Renderer.h
src/: AI.cpp  Board.cpp  Game.cpp  Piece.cpp  Renderer.cpp
